Updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2023-palestine_economy",
+  "name": "2023-palestine_report",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
